feat: localize tools/memory/models/notifications/python-health endpoints (TODO-110 Task 2)